<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spn_input"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spn_output" />

    <Spinner
        android:id="@+id/spn_output"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtinlay_canvas"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/spn_input"
        app:layout_constraintTop_toBottomOf="@+id/spn_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_inputfirstvalue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/starting_currency"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:text="@string/default_SpinIn" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtinlay_canvas_end"
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:expandedHintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spn_output">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_outputsecondvalue"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:hint="@string/ending_currency"
            android:text=" " />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/convert_curr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtinlay_canvas" />

    <Button
        android:id="@+id/btn_savevalues"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/save_currency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtv_Favouritestitle" />

    <Button
        android:id="@+id/btn_selectfromsaved"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/select_from_saved_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_savevalues" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_weeklychange" />

    <Button
        android:id="@+id/btn_removeAll"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/removeAllFav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_selectfromsaved" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/txtinlay_canvas_end"
        app:layout_constraintStart_toEndOf="@+id/txtinlay_canvas"
        app:layout_constraintTop_toTopOf="@+id/txtinlay_canvas"
        app:srcCompat="@android:drawable/ic_popup_sync" />

    <Button
        android:id="@+id/btn_weeklychange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_weekly_change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_convert" />

    <TextView
        android:id="@+id/txtv_Favouritestitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/favourites_title_ui"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dev_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>
